--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "news-scrape",
   "version": "1.0.0",
-  "description": "",
+  "description": "Ben Diamond",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,8 @@
     "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
-    "mongoose": "^5.7.10"
-  }
+    "mongoose": "^5.7.10",
+    "morgan": "^1.9.1"
+  },
+  "devDependencies": {}
 }
